* Added Company list method.
* Removed unnecessary CGI escape of message.
* Removed CompanyUser attributes.
* Adding company id parameter for Contact update call.
* Adding company id parameter for CustomerCall, EmailInvitation and Contact create calls.
* Removed the syndicate attribute from the Company proxy model.
* Added free_trials proxy model
* Added handwritten_reviews proxy model

=== 0.3.37 2013-10-03

* Fixed unauthorized exception creation edge case when no message is sent from the server.
* Reverted models that were sending empty hashes back to their previous form.
* Removed unneeded attr_accessor calls from termination_notice and member_call proxy models.
* Added sales_team model
* Added admin_user model
* Added admin_performance_event proxy model and tests.
>>>>>>> release/r69
* Added enterprise model.
* Added enterprise_settings model.
* Added default functionality to match API's default responses to Lobbyist::Base.
* Passing empty hash for termination_notice put request

=== 0.3.36 2013-09-17

* Fixed reset_password parameters for the company_user proxy model.
* Added terminate method to the company proxy model.
* Added reset_password call to company user proxy model.
* Added new gem file 'faraday_middleware' for multi-part posts and logic for multi-part post

=== 0.3.35 2013-09-04

* Added the reset_password call to the CompanyUser proxy model.
* Fixed collection related test failures.
* Added the review confirmation proxy model and tests.

=== 0.3.34 2013-08-24

* Converted the customer call, review, email invitation and review challenge proxy models to use the collection object.
* Added Collection object to handle index calls that return meta-data.

=== 0.3.33 2013-07-24

* Added review_suggestion model.

=== 0.3.32 2013-07-23

* Added additional attributes to the customer call proxy model.

=== 0.3.31 2013-07-22

* Added the timezone field to the company proxy model.

=== 0.3.30 2013-07-19
